tests/cli/apply/traditional/snapshots/main__cli__apply__traditional__redo__should_fail_to_redo_inexistant_migration.snap
---
source: tests/cli/apply/traditional/redo.rs
expression: stderr
---
Error: 
   0: The migration file was not found

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
