tests/cli/apply/traditional/snapshots/main__cli__apply__traditional__redo__should_fail_to_redo_migration_that_was_not_applied.snap
---
source: tests/cli/apply/traditional/redo.rs
expression: stderr
---
Error: 
   0: This migration was not applied in the SurrealDB instance. Please make sure you correctly applied this migration before.

[location]

Backtrace omitted. Run with RUST_BACKTRACE=1 environment variable to display it.
Run with RUST_BACKTRACE=full to include source snippets.
