tests/cli/apply/traditional/snapshots/main__cli__apply__traditional__redo__should_redo_migration_with_success.snap
---
source: tests/cli/apply/traditional/redo.rs
expression: stdout
---
Executing migration AddPost...
Migration successfully re-executed!
